--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,8 @@
     width:100%;
     height:100%;
     position:fixed;
-}
+    max-width: 2160px;
+    }
 
 .boton {
     position:absolute;
@@ -36,4 +37,18 @@
 
 .computerturn {
     pointer-events: none;
+}
+
+#derrota {
+    z-index: 2;
+    display: none;
+    position:absolute;
+    height: 90%; 
+    width: 90%;
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    transition: 1s;
 }
